--- a/partials/threads.html
+++ b/partials/threads.html
@@ -11,6 +11,9 @@
         <input type="text" ng-model="ThreadsFactory.threadName" class="form-control" placeholder="Thread Name" required autofocus>
       </div>
       <div class="form-group col-lg-4">
+        <input type="text" ng-model="ThreadsFactory.userName" class="form-control" placeholder="Username" required>
+      </div>
+      <div class="form-group col-lg-4">
         <input type="text" ng-model="ThreadsFactory.threadUrl" class="form-control" placeholder="https://www.example.com" required>
         <button id="post" type="submit" class="btn btn-warning btn-xs">Post</button>
       </div>
@@ -23,16 +26,20 @@
   <ul>
     <li ng-repeat="item in threads | filter:ThreadsFactory.checkThread | orderBy:'-votes'">
       <div class="row threads">
-        <button ng-click="ThreadsFactory.plusVote(item)" type="button" class="btn btn-default btn-xs" aria-label="Left Align">
-          <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-        </button>
+        <div class="col-sm-2">
+          <button ng-click="ThreadsFactory.plusVote(item)" type="button" class="btn btn-default btn-xs" aria-label="Left Align">
+            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+          </button>
 
-        <button ng-click="ThreadsFactory.minusVote(item)" type="button" class="btn btn-default btn-xs" aria-label="Left Align">
-          <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-        </button>
-
-        <h5>Rank: {{ item.votes }}</h5>
+          <button ng-click="ThreadsFactory.minusVote(item)" type="button" class="btn btn-default btn-xs" aria-label="Left Align">
+            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+          </button>
+        </div>
+        <div class="col-sm-2">
+          <h5>Rank: {{ item.votes }}</h5>
+        </div>
         <a href="{{item.url}}">{{ item.name }}</a>
+        <h5>user: {{ item.user }}</h5>
         <button ui-sref="threads.comments({ threadId: item.id })">Comment</button>
         <p>{{ item.date | date:'HH:mm MM-dd-yyyy' }}</p>
       </div>
