--- a/partials/threads.html
+++ b/partials/threads.html
@@ -38,10 +38,18 @@
         <div class="col-sm-2">
           <h5>Rank: {{ item.votes }}</h5>
         </div>
-        <a href="{{item.url}}">{{ item.name }}</a>
-        <h5>user: {{ item.user }}</h5>
-        <button ui-sref="threads.comments({ threadId: item.id })">Comment</button>
-        <p>{{ item.date | date:'HH:mm MM-dd-yyyy' }}</p>
+        <div class="col-sm-2">
+          <a href="{{item.url}}">{{ item.name }}</a>
+        </div>
+        <div class="col-sm-2">
+          <h5>user: {{ item.user }}</h5>
+        </div>
+        <div class="col-sm-2">
+          <button ui-sref="threads.comments({ threadId: item.id })">Comment</button>
+        </div>
+        <div class="col-sm-2">
+          <p>{{ item.date | date:'HH:mm MM-dd-yyyy' }}</p>
+        </div>
       </div>
     </li>
   </ul>
