--- a/partials/threads.html
+++ b/partials/threads.html
@@ -36,7 +36,7 @@
           </button>
         </div>
         <div class="col-sm-2">
-          <h5>Rank: {{ item.votes }}</h5>
+          <h5>Votes: {{ item.votes }}</h5>
         </div>
         <div class="col-sm-2">
           <a href="{{item.url}}">{{ item.name }}</a>
