--- a/partials/threads.comments.html
+++ b/partials/threads.comments.html
@@ -7,11 +7,11 @@
   </ul>
 </div>
 
-<div>
+<div id="commentbox">
   <h2>Add a comment to {{ thread.name }}</h2>
   <form ng-submit="addComment()" class="form-inline" role="form">
     <div class="form-group">
-      <textarea rows="3" ng-model="commentText" class="form-control" placeholder="Please enter your comment"></textarea>
+      <textarea rows="3" cols="100" ng-model="commentText" class="form-control" placeholder="Please enter your comment" required></textarea>
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
