--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,14 @@ ul  {
 #commentbox {
   margin-bottom: 100px;
 }
+
+#thread {
+  border-style: solid;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #C2C2D6;
+}
