--- a/partials/threads.comments.html
+++ b/partials/threads.comments.html
@@ -13,6 +13,6 @@
     <div class="form-group">
       <textarea rows="3" cols="100" ng-model="commentText" class="form-control" placeholder="Please enter your comment" required></textarea>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-default">Add Comment</button>
   </form>
 </div>
